# inovIntell-extractor

./: .env.example  Banna 2022_extracted.json  Belaroussi 2023_extracted.json  LICENSE  Makefile  Pons-Tostivint 2023_extracted.json  README.md  main.py  pyproject.toml
agents/: agent.py  base_agent.py
config/: app_config.yml  config_helper.py
document/: processor.py
extractor/: rwe_extractor.py
forms/: demographics_schema.json  oncology_schema.json  results_schema.json
utils/: app_utils.py
wandb/: latest-run
wandb/run-20250322_174512-1zrumvt8/: run-1zrumvt8.wandb
wandb/run-20250322_174512-1zrumvt8/files/: Banna 2022_extracted.json  wandb-metadata.json  wandb-summary.json
wandb/run-20250322_174839-qffnf8ma/: run-qffnf8ma.wandb
wandb/run-20250322_174839-qffnf8ma/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250322_180816-z5moer5t/: run-z5moer5t.wandb
wandb/run-20250322_180816-z5moer5t/files/: wandb-metadata.json  (+1 more)
wandb/run-20250322_181202-onjau3ex/: run-onjau3ex.wandb
wandb/run-20250322_181631-4wtdhwi7/: run-4wtdhwi7.wandb
wandb/run-20250322_181933-dv50s5fj/: run-dv50s5fj.wandb
wandb/run-20250322_220832-3ls9qhu2/: run-3ls9qhu2.wandb
wandb/run-20250322_220944-t4vwkm5j/: run-t4vwkm5j.wandb
wandb/run-20250322_221201-9ewc12od/: run-9ewc12od.wandb
wandb/run-20250322_221436-ev6zekj2/: run-ev6zekj2.wandb
wandb/run-20250322_221617-bjbk8va4/: run-bjbk8va4.wandb
wandb/run-20250322_223913-pg8eiszi/: run-pg8eiszi.wandb
wandb/run-20250322_224422-eltitwm6/: run-eltitwm6.wandb
wandb/run-20250322_224642-bqxh41ed/: run-bqxh41ed.wandb
(+28 files in other folders)
