[tool.poetry]
name = "inovintell-extractor"
version = "0.1.0"
description = ""
authors = ["danielAdama <adamadaniel321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.3.47"
langchain-groq = "^0.3.1"
docx = "^0.2.4"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
langgraph = "^0.3.18"
langchain-openai = "^0.3.9"
wandb = "^0.19.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
